# email

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
notifier/: main.py
notifier/core/: __init__.py  conf.py
notifier/email_managers/: __init__.py  base_manager.py  confirm_registration.py
notifier/enums/: __init__.py  enums.py
notifier/queue_service/: __init__.py  queue_handler.py  send_email.py
notifier/templates/: password_restore.py  reg_confirm.py
notifier/utils/: __init__.py  get_env_var.py
