[tool.poetry]
name = "smtp_sender"
version = "0.1.1"
description = "Service for sending email"
authors = ["Sergey Rubnikovich <https://github.com/Sergey-x>"]

[tool.poetry.dependencies]
python = "^3.10"
Sendinblue = "^2.0.5"
pika = "^1.3.1"
sib-api-v3-sdk = "^7.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
mypy = "^0.982"
flake8 = "^5.0.4"
isort = "^5.10.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_local_folder = "email_sender"
lines_after_imports = 2
multi_line_output = 3
line_length = 100
include_trailing_comma = true
